--- a/src/global.css
+++ b/src/global.css
@@ -58,3 +58,33 @@ a {
     flex-direction: column;
 }
 
+.experience-bar {
+    display: flex;
+    align-items: center;
+}
+
+.experience-bar span{
+    font-size: 1rem;
+}
+
+.experience-bar .experience-bar__bar {
+    flex: 1;
+    height: 4px;
+    border-radius: 4px;
+    background: var(--gray-line);
+    position: relative;
+    margin: 0 1.5rem;
+}
+
+.experience-bar .experience-bar__bar .experience-bar__percentage-fill {
+    height: 4px;
+    border-radius: 4px;
+    background: var(--green);
+}
+
+.experience-bar .experience-bar__current-experience{
+    position: absolute;
+    top: 12px;
+    transform: translateX(-50%)
+}
+
