--- a/src/components/Countdown/Countdown.module.css
+++ b/src/components/Countdown/Countdown.module.css
@@ -33,7 +33,6 @@
     font-size: 6.25rem;
     margin: 0 0.5rem;
 }
-
 .countdownButton {
     width: 100%;
     height: 5rem;
@@ -48,8 +47,24 @@
     font-size: 1.25rem;
     font-weight: 600;
     transition: background-color 0.2s;
+    outline: none;
 }
 
-.countdownButton:hover {
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
+}
+.countdownButton:not(:disabled):hover {
     background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background-color: var(--white);
+    color: var(--title)
+}
+
+.countdownButtonActive:not(:disabled):hover {
+    background-color: var(--red);
+    color: var(--white);
 }
