--- a/src/components/ExperienceBar/ExperienceBar.module.css
+++ b/src/components/ExperienceBar/ExperienceBar.module.css
@@ -20,6 +20,7 @@
     height: 4px;
     border-radius: 4px;
     background: var(--green);
+    max-width: 100%;
   }
   
   span.currentExperience {
