--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-:root {
+body.light {
     --white: #fff;
     --background: #f2f3f5;
     --gray-line: #dcdde0;
@@ -10,10 +10,28 @@
     --blue: #5965e0;
     --blue-dark: #4953b8;
     --blue-twitter: #2aa9e0;
+    --border-countdown: #f0f1f3;
+    --brightness: 1;
+    --brightness-hover: 0.9;
+}
+
+body:not(.light){
+    --white: #1d1d1d;
+    --background: #1a1a1a;
+    --gray-line: #777;
+    --text: #ddd;
+    --text-highlight: #b3b9ff;
+    --title: #bbb;
+    --red: #e83f5b;
+    --green: #46d62b;
+    --blue: #5965e0;
+    --blue-dark: #4953b8;
+    --blue-twitter: #2aa9e0;
+    --border-countdown: #222;
 }
 
 
-@media(max-width: 1368px){
+@media(max-width: 1080px){
     html {
         font-size: 93.75%;
     }
