--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -50,7 +50,7 @@
     outline: none;
     border: none;
     color: var(--text);
-    border: 1px solid;
+    border: none;
     width: 24px;
     height:24px;
 }
